--- a/index.css
+++ b/index.css
@@ -160,20 +160,18 @@ p{ text-align: left}
 
 
 .backgroundblack{
-	margin-top: 0%;
-	background-color: black;
+
+	background-color:black;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 100%;
-    height: 250px;
+    height: 100px;
 	}
 .aboutwall{
   position: relative;
-  margin-left: 10%;
-  margin-right: 10%;
   margin-bottom: 10%;
   top: 10%;
-  width: 80%;
+  width: 99.5%;
   height: 80%;
   background: url(./pics/space.jpg);
   -webkit-background-size: cover;
@@ -240,8 +238,8 @@ p{ text-align: left}
   height: 65%;
   width: 23%;
   opacity: .9;
-  margin-left:1%;
-  margin-right: .25%;
+  margin-left:-3%;
+  margin-right: 5%;
   border-radius: 12px;
   background: white;
   border: 4px solid black;
@@ -253,8 +251,8 @@ p{ text-align: left}
   height: 65%;
   width: 25%;
   opacity: .9;
-  margin-left:;
-  margin-right: 10px;
+  margin-left:5%;
+  margin-right:1%;
   border-radius: 12px;
   background: white;
   border: 4px solid black;
@@ -291,11 +289,8 @@ p{ text-align: left}
 /*PROGRAMMING*******************************************************************************************************************************************/
 .prowall{
   position: relative;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: 10%;
   top: 10%;
-  width: 80%;
+  width: 99%;
   height: 80%;
   background: url(./pics/matrix.jpg);
   -webkit-background-size: cover;
@@ -325,10 +320,10 @@ p{ text-align: left}
   width: 50%;
   height: 10%;
   background: black;
-  color: green;
+  color: blue;
   border-radius: 12px;
   margin-bottom: 2%;
-  box-shadow: -10px -10px 5px green;
+  box-shadow: -10px -10px 5px blue;
 }
 .protext{
   height: 100%;
@@ -351,13 +346,14 @@ p{ text-align: left}
   margin-right: auto;
   background: black;
   border-radius: 12px ;
-  box-shadow: 10px -10px 5px green;
+  box-shadow: 10px -10px 5px blue;
 
 
 }
 
 .divstext{
-  color: green;
+  color: blue
+  ;
   text-align: center;
   font-size: 150%;
   position: center;
@@ -367,12 +363,9 @@ p{ text-align: left}
 /*LEAGUE OF LEGENDS-----------------------------------------------------------------------------------------------------------------------------------*/
 .gamewall{
   position: relative;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: 10%;
   top: 10%;
-  width: 80%;
-  height: 80%;
+  width: 99%;
+  height: 99%;
   background: url("./pics/LoL.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -445,12 +438,9 @@ p{ text-align: left}
 /*CONTACT*****************************************************************************************************************/
 .contwall{
   position: relative;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: 10%;
   top: 10%;
-  width: 80%;
-  height: 80%;
+  width: 99%;
+  height: 100%;
   background: url("./pics/contact.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
