--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body{
 
 	color: white;
 	vertical-align: bottom;
-	top: 21vh;
+	top: 10vh;
 	left: 75.75vh;
 	margin-top: 25vh;
 
@@ -54,10 +54,24 @@ body{
 }
 
 .pic{
-	height: 22.1vh;
-	border: 1.5vh solid white;
+	height: 25vh;
+	border: 3vh solid white;
 	border-radius: 25vh;
 	margin-bottom: 2vh;
+	opacity: .25;
+
+
+	transition: border 1s, opacity 1s;
+	-webkit-transition: border 1s, opacity 1s;
+
+	/*transition: border-radius 2s;*/
+}
+
+.pic:hover{
+	border: 1vh solid white;
+	opacity: 1;
+
+
 }
 
 .divider{
@@ -80,7 +94,7 @@ body{
 
 	color: white;
 	vertical-align: bottom;
-	top: 45vh;
+	top: 44vh;
 	left: 37vh;
 
 	margin-top: 25vh;
